# PECS

./: .gitmodules  CMakeLists.txt  Component.h  ComponentManager.cpp  ComponentManager.h  Entity.cpp  Entity.h  EntityComponentSystem.cpp  EntityComponentSystem.h  EntityManager.cpp  EntityManager.h  MessageManager.cpp  MessageManager.h  README.md  SystemManager.cpp  SystemManager.h  View.cpp  View.h  example.cpp  main.cpp  test.cpp
ComponentSystems/: ComponentBase.cpp  ComponentBase.h  ComponentDummy.cpp  ComponentDummy.h  ComponentSystem.h  ComponentSystemBase.h  System.h  SystemBase.cpp  SystemBase.h
PECS/core/: Component.h  ComponentManager.cpp  ComponentManager.h  EntityComponentSystem.cpp  EntityManager.cpp  EntityManager.h  Signature.h  SystemManager.cpp  SystemManager.h  View.h  ViewManager.cpp
PECS/util/: sparse_map.h  sparse_set.h
examples/: example_0.cpp  example_1.cpp
src/: Component.h  ComponentBase.cpp  ComponentBase.h  ComponentManager.cpp  ComponentManager.h  Entity.cpp  Entity.h  EntityComponentSystem.cpp  EntityComponentSystem.h  EntityManager.cpp  Signature.h  SignatureBase.h  System.h  SystemBase.h  SystemManager.h  View.cpp  View.h  ViewBase.h  pecs.h
src/core/: Component.h  ComponentManager.h  Entity.cpp  Entity.h  EntityComponentSystem.h  EntityManager.h  SignatureBase.h  System.h  SystemManager.h  ViewManager.h
src/util/: TypeId.h  sparse_map.cpp  sparse_map.h  sparse_set.cpp
tests/: TestCase_0.cpp  TestCase_ecs.cpp  TestCase_entity.cpp  TestCase_signature.cpp  TestCase_util.cpp  TestCase_view.cpp
util/: sparse_set.h
